_build/html/reports/Any() vs All()-Copy1.log
Traceback (most recent call last):
  File "c:\users\sahil choudhary\appdata\local\programs\python\python37-32\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "c:\users\sahil choudhary\appdata\local\programs\python\python37-32\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\sahil choudhary\appdata\local\programs\python\python37-32\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\sahil choudhary\appdata\local\programs\python\python37-32\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\sahil choudhary\appdata\local\programs\python\python37-32\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "c:\users\sahil choudhary\appdata\local\programs\python\python37-32\lib\site-packages\nbclient\client.py", line 554, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "c:\users\sahil choudhary\appdata\local\programs\python\python37-32\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\sahil choudhary\appdata\local\programs\python\python37-32\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
SELECT 
sum(total_bill),
avg(size),
min(tip),
FROM 
  tips 
where tip>5
Group by sex,day
Order by total_bill desc,tip asc
------------------

[1;36m  File [1;32m"<ipython-input-1-23a26eb40e98>"[1;36m, line [1;32m6[0m
[1;33m    tips[0m
[1;37m    ^[0m
[1;31mIndentationError[0m[1;31m:[0m unexpected indent

IndentationError: unexpected indent (<ipython-input-1-23a26eb40e98>, line 6)

